2004-04-13  John Cliff	<simarilius@yahoo.com>
	* src/sp-shape.cpp, src/dialogs/stroke-style.cpp
	Couple of changes to marker related code, mid and end markers now point in correct 
	direction, turning off start markers behaves correctly.
	This follows on from changes made by me and Carl Hetherington that were commited 
	yesterday to 
	src/inkscape-stock.cpp, src/sp-item.cpp, src/sp-marker.cpp, src/sp-shape.cpp,
	src/style.cpp, src/style.h, src/dialogs/stroke-style.cpp 
	to implement marker UI and fixes to the marker rendering code.


2004-04-11  Ted Gould <ted@gould.cx>

	* src/extension/system.cpp, src/extension/internal/eps-out.cpp
      src/extension/internal/eps-out.h:
	First pass at a file save dialog with EPS output.  The dialog
	sets the bounding box in the file.  Comments encouraged.

2004-04-11  Ted Gould <ted@gould.cx>

	* src/file.cpp, src/main.cpp, src/print.cpp, src/extension/init.cpp,
      src/extension/init.h, src/extension/system.cpp, src/extension/system.h,
      src/extension/implementation/script.cpp, src/extension/internal/eps-out.cpp,
      src/extension/internal/gnome.cpp, src/extension/internal/ps-out.cpp,
      src/extension/internal/ps.cpp, src/extension/internal/svg.cpp,
      src/extension/internal/win32.cpp:
    Change alot of files, but small changes.  Basically just took
	system.cpp and init.cpp and finally ported them to the Inkscape::
	Extension namespace.  Cleaned up the code in them a bunch, it is
	much easier to read now!  All the other files are just referencing
	these changes.

2004-04-11  Kees Cook <kees@outflux.net>

	* src/verbs.h, src/verbs.cpp, src/interface.cpp, src/interface.h: replaced
	  the rest of the missing menu verbs: "View New", "Cleanup".  Created
	  generic function to add icons to a given menu item (for submenu icons
	  mostly).
	* share/icons/icons.svg: added "selection_cleanup", "selection_deselect",
	  "selection_select_all".  Corrected "view_new" and "selection_smooth",